# Proyecto1_IE0724

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
build2/: 2nums.txt
include/: ConvexHull.h  FileManager.h  ImageGenerator.h
src/: ConvexHull.cpp  DisplayImage.cpp  FileManager.cpp  ImageGenerator.cpp  example.cpp  main.cpp
test/: sinnums.txt  test.cpp
